--- a/index.html
+++ b/index.html
@@ -1,40 +1,195 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>Empire Game</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>الإمبراطورية الاقتصادية</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="sidebar">
-    <h2>القائمة</h2>
-    <ul>
-      <li onclick="showSection('profile')">🏠 الملف الشخصي</li>
-      <li onclick="showSection('invest')">💰 الاستثمار والتعدين</li>
-      <li onclick="showSection('state')">🏛️ الدولة</li>
-    </ul>
-  </div>
+<body class="bg-gradient-to-br from-gray-900 via-purple-900 to-violet-900 dark:from-black dark:via-gray-900 dark:to-purple-900 text-white min-h-screen transition-all duration-500">
+    
+    <!-- Header -->
+    <header class="backdrop-blur-md bg-black/20 border-b border-purple-500/30 sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <div class="flex items-center space-x-4 space-x-reverse">
+                <div class="w-12 h-12 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center animate-pulse">
+                    <i class="fas fa-crown text-yellow-300 text-xl"></i>
+                </div>
+                <h1 class="text-2xl font-bold bg-gradient-to-r from-purple-400 to-pink-400 bg-clip-text text-transparent">
+                    الإمبراطورية الاقتصادية
+                </h1>
+            </div>
+            <div class="flex items-center space-x-4 space-x-reverse">
+                <button id="darkModeToggle" class="p-2 rounded-lg bg-purple-600/50 hover:bg-purple-600 transition-colors">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <div class="flex items-center space-x-2 space-x-reverse bg-green-500/20 px-4 py-2 rounded-lg border border-green-500/30">
+                    <i class="fas fa-coins text-yellow-400"></i>
+                    <span id="userBalance" class="font-bold text-yellow-400">50,000</span>
+                </div>
+            </div>
+        </div>
+    </header>
 
-  <div class="content">
-    <section id="profile">
-      <h1>الملف الشخصي</h1>
-      <div id="profileData"></div>
-      <button onclick="register()">تسجيل/تعديل هوية</button>
-    </section>
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 py-8">
+        <!-- User Info Card -->
+        <div class="mb-8 bg-gradient-to-r from-purple-800/50 to-pink-800/50 backdrop-blur-md rounded-3xl p-6 border border-purple-500/30 shadow-2xl">
+            <div class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-6 md:space-x-reverse">
+                <div class="w-24 h-24 bg-gradient-to-r from-blue-500 to-purple-500 rounded-full flex items-center justify-center animate-float">
+                    <i class="fas fa-user-crown text-3xl text-yellow-300"></i>
+                </div>
+                <div class="text-center md:text-right flex-1">
+                    <h2 id="userName" class="text-3xl font-bold mb-2">محمد الإمبراطور</h2>
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm">
+                        <div class="bg-blue-500/20 p-3 rounded-lg border border-blue-500/30">
+                            <i class="fas fa-calendar-alt mb-2 text-blue-400"></i>
+                            <p class="text-gray-300">العمر</p>
+                            <p id="userAge" class="font-bold text-blue-400">25 سنة</p>
+                        </div>
+                        <div class="bg-purple-500/20 p-3 rounded-lg border border-purple-500/30">
+                            <i class="fas fa-medal mb-2 text-purple-400"></i>
+                            <p class="text-gray-300">الرتبة</p>
+                            <p id="userRank" class="font-bold text-purple-400">إمبراطور</p>
+                        </div>
+                        <div class="bg-green-500/20 p-3 rounded-lg border border-green-500/30">
+                            <i class="fas fa-money-bill-wave mb-2 text-green-400"></i>
+                            <p class="text-gray-300">الراتب</p>
+                            <p id="userSalary" class="font-bold text-green-400">10,000</p>
+                        </div>
+                        <div class="bg-yellow-500/20 p-3 rounded-lg border border-yellow-500/30">
+                            <i class="fas fa-wallet mb-2 text-yellow-400"></i>
+                            <p class="text-gray-300">الرصيد</p>
+                            <p id="userWallet" class="font-bold text-yellow-400">50,000</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <section id="invest" style="display:none">
-      <h1>الاستثمار والتعدين</h1>
-      <button onclick="mine()">تعدين ⛏️</button>
-      <button onclick="invest()">استثمار 📈</button>
-      <div id="investData"></div>
-    </section>
+        <!-- Action Buttons Grid -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+            <!-- Row 1: Profile & Business -->
+            <button onclick="openModal('profileModal')" class="group relative overflow-hidden bg-gradient-to-r from-blue-600 to-blue-800 p-6 rounded-3xl border border-blue-500/30 hover:shadow-2xl hover:shadow-blue-500/25 transform hover:scale-105 transition-all duration-300 animate-glow">
+                <div class="absolute inset-0 bg-gradient-to-r from-blue-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-user-circle text-4xl mb-4 text-blue-300"></i>
+                    <h3 class="text-xl font-bold mb-2">الملف الشخصي</h3>
+                    <p class="text-sm text-blue-200">عرض معلوماتك الشخصية</p>
+                </div>
+            </button>
 
-    <section id="state" style="display:none">
-      <h1>حالة الدولة</h1>
-      <div id="stateData"></div>
-    </section>
-  </div>
+            <button onclick="openModal('investmentModal')" class="group relative overflow-hidden bg-gradient-to-r from-green-600 to-green-800 p-6 rounded-3xl border border-green-500/30 hover:shadow-2xl hover:shadow-green-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-green-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-chart-line text-4xl mb-4 text-green-300"></i>
+                    <h3 class="text-xl font-bold mb-2">استثمار</h3>
+                    <p class="text-sm text-green-200">استثمر أموالك بذكاء</p>
+                </div>
+            </button>
 
-  <script src="script.js"></script>
+            <button onclick="openModal('miningModal')" class="group relative overflow-hidden bg-gradient-to-r from-yellow-600 to-orange-600 p-6 rounded-3xl border border-yellow-500/30 hover:shadow-2xl hover:shadow-yellow-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-yellow-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-pickaxe text-4xl mb-4 text-yellow-300"></i>
+                    <h3 class="text-xl font-bold mb-2">تعدين</h3>
+                    <p class="text-sm text-yellow-200">اكتشف المعادن النفيسة</p>
+                </div>
+            </button>
+
+            <!-- Row 2: Business Operations -->
+            <button onclick="openModal('factoryModal')" class="group relative overflow-hidden bg-gradient-to-r from-red-600 to-red-800 p-6 rounded-3xl border border-red-500/30 hover:shadow-2xl hover:shadow-red-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-red-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-industry text-4xl mb-4 text-red-300"></i>
+                    <h3 class="text-xl font-bold mb-2">مصنع</h3>
+                    <p class="text-sm text-red-200">أنشئ مصانع إنتاجية</p>
+                </div>
+            </button>
+
+            <button onclick="openModal('companyModal')" class="group relative overflow-hidden bg-gradient-to-r from-purple-600 to-purple-800 p-6 rounded-3xl border border-purple-500/30 hover:shadow-2xl hover:shadow-purple-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-purple-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-building text-4xl mb-4 text-purple-300"></i>
+                    <h3 class="text-xl font-bold mb-2">شركة</h3>
+                    <p class="text-sm text-purple-200">أسس إمبراطوريتك التجارية</p>
+                </div>
+            </button>
+
+            <button onclick="openModal('shopModal')" class="group relative overflow-hidden bg-gradient-to-r from-pink-600 to-pink-800 p-6 rounded-3xl border border-pink-500/30 hover:shadow-2xl hover:shadow-pink-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-pink-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-store text-4xl mb-4 text-pink-300"></i>
+                    <h3 class="text-xl font-bold mb-2">محل تجاري</h3>
+                    <p class="text-sm text-pink-200">افتح محلات تجارية</p>
+                </div>
+            </button>
+
+            <!-- Row 3: Financial & Social -->
+            <button onclick="openModal('transferModal')" class="group relative overflow-hidden bg-gradient-to-r from-teal-600 to-cyan-600 p-6 rounded-3xl border border-teal-500/30 hover:shadow-2xl hover:shadow-teal-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-teal-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-exchange-alt text-4xl mb-4 text-teal-300"></i>
+                    <h3 class="text-xl font-bold mb-2">تحويل أموال</h3>
+                    <p class="text-sm text-teal-200">حول الأموال للآخرين</p>
+                </div>
+            </button>
+
+            <button onclick="openModal('membersModal')" class="group relative overflow-hidden bg-gradient-to-r from-indigo-600 to-indigo-800 p-6 rounded-3xl border border-indigo-500/30 hover:shadow-2xl hover:shadow-indigo-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-indigo-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-users text-4xl mb-4 text-indigo-300"></i>
+                    <h3 class="text-xl font-bold mb-2">قائمة الأعضاء</h3>
+                    <p class="text-sm text-indigo-200">تصفح أعضاء الإمبراطورية</p>
+                </div>
+            </button>
+
+            <button onclick="openModal('adminModal')" class="group relative overflow-hidden bg-gradient-to-r from-gray-700 to-gray-900 p-6 rounded-3xl border border-gray-500/30 hover:shadow-2xl hover:shadow-gray-500/25 transform hover:scale-105 transition-all duration-300">
+                <div class="absolute inset-0 bg-gradient-to-r from-gray-400/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                <div class="relative z-10">
+                    <i class="fas fa-crown text-4xl mb-4 text-yellow-400"></i>
+                    <h3 class="text-xl font-bold mb-2">لوحة الإمبراطور</h3>
+                    <p class="text-sm text-gray-300">إدارة موارد الدولة</p>
+                </div>
+            </button>
+        </div>
+
+        <!-- Assets Overview -->
+        <div class="bg-gradient-to-r from-gray-800/50 to-gray-900/50 backdrop-blur-md rounded-3xl p-6 border border-gray-500/30">
+            <h3 class="text-2xl font-bold mb-6 text-center bg-gradient-to-r from-yellow-400 to-orange-400 bg-clip-text text-transparent">
+                <i class="fas fa-treasure-chest mr-2"></i>
+                ممتلكاتي
+            </h3>
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+                <div class="bg-blue-500/10 p-4 rounded-xl border border-blue-500/20 text-center">
+                    <i class="fas fa-building text-2xl text-blue-400 mb-2"></i>
+                    <p class="text-blue-400 font-bold text-xl" id="companiesCount">3</p>
+                    <p class="text-sm text-gray-300">شركات</p>
+                </div>
+                <div class="bg-red-500/10 p-4 rounded-xl border border-red-500/20 text-center">
+                    <i class="fas fa-industry text-2xl text-red-400 mb-2"></i>
+                    <p class="text-red-400 font-bold text-xl" id="factoriesCount">2</p>
+                    <p class="text-sm text-gray-300">مصانع</p>
+                </div>
+                <div class="bg-pink-500/10 p-4 rounded-xl border border-pink-500/20 text-center">
+                    <i class="fas fa-store text-2xl text-pink-400 mb-2"></i>
+                    <p class="text-pink-400 font-bold text-xl" id="shopsCount">5</p>
+                    <p class="text-sm text-gray-300">محلات</p>
+                </div>
+                <div class="bg-green-500/10 p-4 rounded-xl border border-green-500/20 text-center">
+                    <i class="fas fa-chart-line text-2xl text-green-400 mb-2"></i>
+                    <p class="text-green-400 font-bold text-xl" id="investmentsCount">8</p>
+                    <p class="text-sm text-gray-300">استثمارات</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Modals will be here -->
+    <div id="modalContainer"></div>
+
+    <script src="script.js"></script>
 </body>
-</html>
+              </html>
